<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="#273968"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginLeft="-12dp"
        android:layout_marginTop="110dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/user_50px"
            android:gravity="center"
            android:hint="@string/username"
            android:paddingLeft="2dp" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/password_50px"
            android:gravity="center"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#04ea00"
        android:text="@string/login"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="35dp"-->
        <!--android:text="@string/forgot_password"-->
        <!--android:textColor="#ffffff" />-->

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/register"
            android:textColor="#04ea00"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>